tests/fixtures/pass/raw_pointer_borrow.sali
let shared('a: region)
  (borrow('a) anchor: i32)(pointer: MutPtr(i32)): borrow('a) i32 = unsafe do {
  raw_borrow(pointer, borrow anchor)
}

let mutable('a: region)
  (mut borrow('a) anchor: i32)(pointer: MutPtr(i32)): mut borrow('a) i32 = unsafe do {
  raw_mut_borrow(pointer, mut borrow anchor)
}

let main(): i32 = {
  let pointer = unsafe do {
    raw_alloc(i32)(size_of(i32), align_of(i32))
  }
  unsafe do {
    raw_init(pointer, 20)
  }
  let mut anchor = 0
  let first = do {
    let reference = shared(anchor)(pointer)
    reference
  }
  do {
    let reference = mutable(anchor)(pointer)
    reference = 22
  }
  let second = unsafe do {
    raw_take(pointer)
  }
  unsafe do {
    raw_dealloc(pointer, size_of(i32), align_of(i32))
  }
  first + second
}
