tests/fixtures/fail/raw_borrow_mut_shared_anchor.sali
let main(): i32 = {
  let pointer = unsafe do {
    raw_alloc(i32)(size_of(i32), align_of(i32))
  }
  let mut anchor = 0
  let reference = unsafe do {
    raw_borrow(mut)(pointer, borrow anchor)
  }
  reference
}
